--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,10 @@
         android:paddingBottom="8sp"
         android:text="@string/app_name"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault"/>
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_below="@id/subheading">
     <TextView
         android:id="@+id/article"
         android:layout_width="match_parent"
@@ -49,6 +52,7 @@
         android:paddingEnd="8sp"
         android:paddingRight="8sp"
         android:paddingBottom="8sp"
-        android:text="@string/article_text" />
-
+        android:text="@string/article_text"
+        android:autoLink="web"/>
+</ScrollView>
 </RelativeLayout>
