--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,11 @@
                 android:paddingBottom="8sp"
                 android:text="@string/article_text"
                 android:autoLink="web"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_comment"
+                />
         </LinearLayout>
 
 </ScrollView>
